# Graphics-playground

./: .gitignore  AdjacentEdgesRelationEditor.hpp  App.cpp  App.hpp  BresenhamDrawingLineAlgorithm.hpp  Button.hpp  ButtonDrawer.hpp  CMakeLists.txt  CircularSector.hpp  HorizontalRelationEditor.hpp  IO.hpp  Line.cpp  Line.hpp  NaiveDrawingLineAlgorithm.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  PolygonDrawer.cpp  PolygonDrawer.hpp  PolygonEditor.cpp  PolygonEditor.hpp  PolygonMovingEditor.hpp  PolygonVertexInsertingEditor.cpp  PolygonVertexInsertingEditor.hpp  PolygonVertexRemovingEditor.cpp  PolygonVertexRemovingEditor.hpp  Render.cpp  Render.hpp  Slider.hpp  VerticalRelationEditor.hpp  WuDrawingLineAlgorithm.hpp  backupMain.cpp  chat.txt  defaultPoligons.txt  global.hpp  include.hpp  poligons.txt  program.cpp  renderBackup.txt  (+1 more)
